<resources>
    <string name="app_name">GymApp</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="workouts">Workouts</string>
    <string name="nutrition_plan">Nutrition Plan</string>

    <!-- DashBoard Screen-->
    <string name="my_workout">My Workout</string>
    <string name="previous_workout">Previous Workout</string>
    <string name="latest_news">Latest News</string>
    <string name="static_text">A variation of the ordinary lorem ipsum text has been used in typesetting since the 1960s or earlier, when it was popularized by advertisements for Letraset transfer sheets. It was introduced to the information age in the mid-1980s by Aldus Corporation, which employed it in graphics and word-processing templates for its desktop publishing program PageMaker. Many popular word processors use this format as a placeholder. Some examples are Pages or Microsoft Word.</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_here">Sign in Here?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="phone">Phone</string>


    <!-- Class schedule-->
    <string name="class_list">Class List</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="library">Library</string>
    <string name="view_profile">View Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="membership_details">Membership Details</string>
    <string name="account_settings">Account Settings</string>
    <string name="member_id">Member ID</string>
    <string name="membership_joining_date">Membership Joining Date</string>
    <string name="member_type">Member Type</string>
    <string name="membership_status">Membership Status</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="wait">Please Wait</string>
    <string name="my_gym">My Gym</string>
    <string name="dashboard">DashBoard</string>
    <string name="fee_payment">Fee Payment</string>
    <string name="notice">Notice</string>
    <string name="coupons">Coupons</string>
    <string name="event">Event</string>
    <string name="total">Total</string>
    <string name="viewprofile">View Profile</string>
    <string name="middle_name">Middle Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contact_information">Contact Information</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_information">Login Information</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="more_information">More Information</string>
    <string name="interested_area_">Interested Area</string>
    <string name="membership_">MemberShip</string>
    <string name="select_joining_date">Select Joining Date</string>
    <string name="select_group">Select Group</string>
    <string name="select_class">Select Class</string>
    <string name="blank_error">Blank not Allowed</string>


</resources>
