<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gym_splash"
    tools:context=".WelcomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_12sdp">

    <RelativeLayout
        android:id="@+id/relative_layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="120dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:contentDescription="@string/my_gym"
            android:src="@drawable/gym_logo"
            android:visibility="visible"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_welcome"
        android:layout_below="@id/relative_layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_28sdp"
            android:text="@string/welcome"
            android:textColor="@color/tt"
            android:textStyle="italic|bold"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/create_account"
        android:layout_below="@id/relative_layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:padding="10dp"
        android:background="@drawable/reactangular_curve_blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/create_your_account"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            android:singleLine="true"
            android:background="@drawable/reactangular_curve_blue"
            android:gravity="center"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative_layout_already_account"
        android:layout_below="@id/create_account"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/already_have_an_account"
            android:textColor="@color/tt"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_already_ac"
        android:layout_below="@id/relative_layout_already_account"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">


        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:text="@string/sign_in_here"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:singleLine="true"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/tt"/>
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
